force-app/main/default/objects/Patch_Manager_User_Pool__c/Patch_Manager_User_Pool__c.object-meta.xml
<CustomObject>
    <description>MKT24-315 - ISOPs is able to create the SDR Group with users in each group, edit the Group to remove the users if needed.</description>
    <label>Patch Manager User Pool</label>
    <nameField>
        <displayFormat>PMP-{00000}</displayFormat>
        <label>Patch Manager User Pool</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patch Manager User Pools</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>