force-app/main/default/objects/Patch_Manager_User_Pool__c/fields/Patch_Key__c.field-meta.xml
<CustomField>
    <fullName>Patch_Key__c</fullName>
    <businessOwnerGroup>Data_Owner_Inside_Sales_Ops</businessOwnerGroup>
    <description>MKT24-315</description>
    <label>Patch Key</label>
    <referenceTo>PatchManager__c</referenceTo>
    <relationshipName>SDR_Pools</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>