force-app/main/default/objects/Patch_Manager_User_Pool__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <businessOwnerGroup>Data_Owner_Inside_Sales_Ops</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MKT24-315</description>
    <label>User Full name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SDR_Pools</relationshipName>
    <type>Lookup</type>
</CustomField>