force-app/main/default/objects/Patch_Manager_User_Pool__c/fields/User_Active__c.field-meta.xml
<CustomField>
    <fullName>User_Active__c</fullName>
    <businessOwnerUser>insidesalesops@rubrik.com.claudepoc</businessOwnerUser>
    <formula>User__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Active</label>
    <type>Checkbox</type>
</CustomField>