force-app/main/default/objects/Patch_Manager_User_Pool__c/fields/User_Profile__c.field-meta.xml
<CustomField>
    <fullName>User_Profile__c</fullName>
    <businessOwnerUser>insidesalesops@rubrik.com.claudepoc</businessOwnerUser>
    <formula>User__r.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Profile</label>
    <type>Text</type>
</CustomField>