force-app/main/default/objects/Patch_Manager_User_Pool__c/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <businessOwnerUser>insidesalesops@rubrik.com.claudepoc</businessOwnerUser>
    <formula>User__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Role</label>
    <type>Text</type>
</CustomField>