force-app/main/default/objects/Patch_Manager_User_Pool__c/validationRules/Inactive_users.validationRule-meta.xml
<ValidationRule>
    <fullName>Inactive_users</fullName>
    <active>true</active>
    <description>System should not allow Users to be added if they are inactive</description>
    <errorConditionFormula>User_Active__c = false</errorConditionFormula>
    <errorMessage>Inactive users can&apos;t be added</errorMessage>
</ValidationRule>